写好设备，配置，模型的静态页面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -39,8 +43,10 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    
-    implementation 'com.android.support:design:27.1.1'
+
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation project(':lib-zxing')
+
+    implementation "org.java-websocket:Java-WebSocket:1.3.9"
 }
