--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.sinano"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -48,5 +48,13 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation project(':lib-zxing')
 
+    //webSocket
     implementation "org.java-websocket:Java-WebSocket:1.3.9"
+    implementation 'com.pnikosis:materialish-progress:1.7'
+
+    //loading button
+    implementation 'br.com.simplepass:loading-button-android:1.14.0'
+
+    //柱状图
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
