--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,16 +29,19 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     //retrofit  newwork
     implementation 'com.squareup.retrofit2:retrofit:2.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
     //rxjava + rxandroid
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'io.reactivex:rxandroid:1.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
     //黄油刀
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -57,4 +60,17 @@ dependencies {
 
     //柱状图
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+    //日历图
+    implementation 'com.applandeo:material-calendar-view:1.5.0'
+
+    //加载动画
+    implementation 'com.github.ybq:Android-SpinKit:1.2.0'
+
+    //刷新控件
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+
+    //图片加载框架
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 }
