--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sinano">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -42,7 +44,10 @@
         <activity android:name=".user.view.activity.UpdataPasswordActivity" />
         <activity android:name=".result.view.activity.DeviceChothListActivity" />
         <activity android:name=".result.view.activity.ClothBadTypeCountDetailActivity" />
-        <activity android:name=".result.view.activity.ProductListActivity"></activity>
+        <activity android:name=".result.view.activity.ProductListActivity" />
+        <activity android:name=".devices.view.activity.DeviceResultForConfigActivity"></activity>
+
+
     </application>
 
 </manifest>
