--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,14 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'  // 统一找viewid
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+ext {
+    compileSdkVersion = 21
+    buildToolsVersion = "19.1.0"
 }
 
 allprojects {
@@ -20,6 +24,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        mavenCentral()
     }
 }
 
